--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
         <title>
             WhereNext?
         </title>
-        <link href= "style.css" rel="stylesheet">
+        <link href= "/web/style.css" rel="stylesheet">
 
     </head>
     <body>
-        <h1>WhereNext?</h1>
+        <header class="header">
+            <div class="logo">
+                <img src="web/img/logo.png" alt="WhereNext logo" class="headerlogo">
+                <h1>WhereNext?</h1>
+            </div>
+            <a href="#" class="login">Log In</a>
+        </header>
+        <p>Don't know where to move?</p>
+        <p>Take the quiz to find out which city is best for you.</p>
+        <button class="start-btn">Start Quiz</button>
 
     </body>
 
