--- a/index.html
+++ b/index.html
@@ -11,20 +11,36 @@
             WhereNext?
         </title>
         <link href= "/web/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.typekit.net/mif5doq.css">
 
     </head>
     <body>
         <header class="header">
             <div class="logo">
                 <img src="web/img/logo.png" alt="WhereNext logo" class="headerlogo">
-                <h1>WhereNext?</h1>
+                <a href="/index.html" class="title">WhereNext?</a>
             </div>
-            <a href="#" class="login">Log In</a>
+            <a href="login.html" class="login">Log In</a>
         </header>
-        <p>Don't know where to move?</p>
-        <p>Take the quiz to find out which city is best for you.</p>
-        <button class="start-btn">Start Quiz</button>
 
+        <div class="container">
+            <div class="text-section">
+                <div class="icon">
+                    <img src="web/img/logo.png" alt="WhereNext Logo">
+                </div>
+                <h1>WhereNext?</h1>
+                <p class="move">Don't know where to move?</p>
+                <p class="prompt">Take the quiz to find out which city is best for you.</p>
+                <div class="button-container">
+                    <a href="quiz.html" class="start-quiz-button">Start Quiz</a>
+                </div>
+            </div>
+            <div class="image-section">
+                <img src="web/img/couple.png" alt="Moving People with Boxes">
+            </div>
+        </div>
+
+        
     </body>
 
 </html>
