--- a/quiz.html
+++ b/quiz.html
@@ -5,14 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WhereNext?</title>
         <link href= "web/quiz.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.typekit.net/mif5doq.css">
     </head>
     <body>
         <header class="header">
             <div class="logo">
                 <img src="web/img/logo.png" alt="WhereNext logo" class="headerlogo">
-                <h1>WhereNext?</h1>
+                <a href="/index.html" class="title">WhereNext?</a>
             </div>
-            <a href="#" class="login">Log In</a>
+            <a href="login.html" class="login">Log In</a>
         </header>
 
         <section class="hero">
