--- a/quiz.html
+++ b/quiz.html
@@ -28,7 +28,7 @@
             <div class="question">
                 <p>How much would you like to spend on living costs per month (rent, transportation, groceries?</p>
                 <div class="slidecontainer">
-                    <input type="range" min="1000" max="3000" value="2000" class="slider" id="myRange">
+                    <input type="range" min="1000" max="3000" value="2000" class="slider" id="COL">
                 </div>
             </div>
 
