--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <header class="header">
             <div class="logo">
-                <img src="web/img/logo.png" alt="WhereNext logo" class="headerlogo">
+                <img src="web/img/logo.svg" alt="WhereNext logo" class="headerlogo">
                 <a href="/index.html" class="title">WhereNext?</a>
             </div>
             <a href="login.html" class="login">Log In</a>
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="text-section">
                 <div class="icon">
-                    <img src="web/img/logo.png" alt="WhereNext Logo">
+                    <img src="web/img/logo.svg" alt="WhereNext Logo">
                 </div>
                 <h1>WhereNext?</h1>
                 <p class="move">Don't know where to move?</p>
