--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
     <body>
         <header class="header">
             <div class="logo">
-                <img src="web/img/logo.png" alt="WhereNext logo" class="headerlogo">
+                <img src="web/img/logo.svg" alt="WhereNext logo" class="headerlogo">
                 <a href="/index.html" class="title">WhereNext?</a>
             </div>
             <a href="/login.html" class="login">Log In</a>
