--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             WhereNext?
         </title>
         <link href= "/web/style.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
@@ -32,7 +31,7 @@
                 </div>
                 <h1>WhereNext?</h1>
                 <p class="move">Don't know where to move?</p>
-                <p class="prompt">Take the quiz to find out which city is best for you.</p>
+                <p class="prompt">Take the quiz to find out which city <br> is best for you.</p>
                 <div class="button-container">
                     <a href="quiz.html" class="start-quiz-button">Start Quiz</a>
                 </div>
