--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WhereNext?</title>
-        <link href= "web/quiz.css" rel="stylesheet">
+        <link href= "quiz.css" rel="stylesheet">
         <link rel="stylesheet" href="https://use.typekit.net/mif5doq.css">
     </head>
     <body>
