--- a/login.html
+++ b/login.html
@@ -24,13 +24,15 @@
         </header>
         <div class="container">
             <div class ='loginDesign'>
-                <p class="main">One step closer </p>
 
-                <p class="main">to getting your results... </p>
-                <p>Create an account to view your results </p>
-                <p>Create your account. </p>
+                <p class="intro">One step closer <br> to getting your results... </p>
+                <p class="account">Create an account to view your results </p>
+                <div class="movingIcon">   
+                    <img src="/web/img/movingTruck.svg" alt="">
+                </div>
             </div>
             <div class="loginInfo">
+                <p >Create your account. </p>
                 <input type="text" placeholder="Email">
                 <input type="text" placeholder="Password">
                 <p>Already have an account? </p><a href="login.html">Log In</a>
