--- a/login.html
+++ b/login.html
@@ -32,10 +32,11 @@
                 </div>
             </div>
             <div class="loginInfo">
-                <p >Create your account. </p>
-                <input type="text" placeholder="Email">
-                <input type="text" placeholder="Password">
-                <p>Already have an account? </p><a href="login.html">Log In</a>
+                    <p class="create">Create your account. </p>
+                    <input type="text" placeholder="Email">
+                    <input type="text" placeholder="Password">
+                    <a class="loginButton" href="quiz.html">Create Account</a>
+                    <p>Already have an account? <a class='loginPage' href="login.html">Log In</a> </p>
             </div>
         </div>
 
