--- a/quiz.html
+++ b/quiz.html
@@ -30,7 +30,7 @@
                 <div class="slidecontainer">
                     <span class="slider-label left">&lt; $1k <br> per month</span>
                     <input type="range" min="1000" max="3000" value="2000" class="slider" id="COL" required>
-                    <span class="slider-label right">$3k+ <br> per month</span>
+                    <span class="slider-label right">&gt; $3k <br> per month</span>
                   </div>
                   <div class="slider-value" id="sliderValue">$2000</div>
                   
@@ -388,8 +388,7 @@
             </div> 
             
         </div>
-        <div class="question">
-
+        <div class="dropdown_container">
             <p>What job industry most aligns with your current or desired career path? <br></p>
             <select id="job-industry" name="job-industry">
                 <option value="" disabled selected>Select an industry</option>
@@ -403,7 +402,7 @@
                 <option value="scientific">Scientific</option>
                 <option value="education">Education</option>
                 <option value="arts">Arts</option>
-                <option value="public-administration">Public administration</option>
+                <option value="public-administration">Public Administration</option>
                 <option value="other">Other</option>
             </select>
         </div>
