--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
         </header>
 
         <div class="container">
+                
             <div class="text-section">
-                <div class="icon">
-                    <img src="web/img/logo.svg" alt="WhereNext Logo">
-                </div>
-                <h1>WhereNext?</h1>
-                <p class="move">Don't know where to move?</p>
-                <p class="prompt">Take the quiz to find out which city <br> is best for you.</p>
-                <div class="button-container">
+                <div class="text_content">
+                    <img class="WhereNextLogo" src="web/img/logo.svg" alt="WhereNext Logo">
+                    <h1>WhereNext?</h1>
+                    <p class="move">Don't know where to move?</p>
+                    <p class="prompt">Take the quiz to find out which city <br> is best for you.</p>
+                    <div class="button-container">
                     <a href="quiz.html" class="start-quiz-button">Start Quiz</a>
+                </div>
+    
                 </div>
             </div>
             <div class="image-section">
