--- a/quiz.html
+++ b/quiz.html
@@ -407,7 +407,8 @@
             </select>
         </div>
             <div class="submit-section">
-                <button type="submit">Submit Survey</button>
+                <a  class="submit" href="matches.html">Submit Survey</a>
+                <!-- <button type="submit">Submit Survey</button>-->
             </div>
 
 
