--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>
             WhereNext?
         </title>
-        <link href= "/web/index.css" rel="stylesheet">
+        <link href= "index.css" rel="stylesheet">
 
     </head>
     <body>
