--- a/login.html
+++ b/login.html
@@ -10,17 +10,16 @@
         <title>
             WhereNext?
         </title>
-        <link href= "/web/login.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://use.typekit.net/mif5doq.css">
+        <link href= "senior-capstone/web/login.css" rel="stylesheet">
 
     </head>
     <body>
         <header class="header">
             <div class="logo">
                 <img src="web/img/logo.svg" alt="WhereNext logo" class="headerlogo">
-                <a href="/index.html" class="title">WhereNext?</a>
+                <a href="senior-capstone/index.html" class="title">WhereNext?</a>
             </div>
-            <a href="/login.html" class="login">Log In</a>
+            <a href="senior-capstone/login.html" class="login">Log In</a>
         </header>
         <div class="container">
             <div class ='loginDesign'>
@@ -28,15 +27,15 @@
                 <p class="intro">One step closer <br> to getting your results... </p>
                 <p class="account">Create an account to view your results </p>
                 <div class="movingIcon">   
-                    <img src="/web/img/movingTruck.svg" alt="">
+                    <img src="senior-capstone/web/img/movingTruck.svg" alt="">
                 </div>
             </div>
             <div class="loginInfo">
                     <p class="create">Create your account. </p>
                     <input type="text" placeholder="Email">
                     <input type="text" placeholder="Password">
-                    <a class="loginButton" href="quiz.html">Create Account</a>
-                    <p class="login">Already have an account? <a class='loginPage' href="login.html">Log In</a> </p>
+                    <a class="loginButton" href="senior-capstone/quiz.html">Create Account</a>
+                    <p class="login">Already have an account? <a class='loginPage' href="senior-capstone/login.html">Log In</a> </p>
             </div>
         </div>
 
