--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WhereNext?</title>
-    <link href= "/web/map.css" rel="stylesheet">
+    <link href= "senior-capstone/web/map.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="logo">
             <img src="web/img/logo.png" alt="WhereNext logo" class="headerlogo">
-            <a href="/index.html" class="title">WhereNext?</a>
+            <a href="senior-capstone/index.html" class="title">WhereNext?</a>
         </div>
         <a href="login.html" class="login">Log In</a>
     </header>
@@ -22,7 +22,7 @@
     </div>
     <div class="again">
         <h2>Based on your results...</h2>
-        <a href="/quiz.html"> Retake Quiz</a>
+        <a href="senior-capstone/quiz.html"> Retake Quiz</a>
     </div>
     <div id="map" style="height: 80vh; width: 100%;"></div>
 
