--- a/matches.html
+++ b/matches.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WhereNext?</title>
-    <link href= "/web/matches.css" rel="stylesheet">
+    <link href= "senior-capstone/web/matches.css" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="logo">
-            <img src="web/img/logo.png" alt="WhereNext logo" class="headerlogo">
-            <a href="/index.html" class="title">WhereNext?</a>
+            <img src="senior-capstone/web/img/logo.png" alt="WhereNext logo" class="headerlogo">
+            <a href="senior-capstone/index.html" class="title">WhereNext?</a>
         </div>
-        <a href="login.html" class="login">Log In</a>
+        <a href="senior-capstone/login.html" class="login">Log In</a>
     </header>
 
     <div class="navigation">
       <h1> Your Top Three Matches</h1>
         <h2>Explore how you matched with other cities</h2>
-        <a href="map.html" class="map" >Continue</a>
+        <a href="senior-capstone/map.html" class="map" >Continue</a>
     </div>
     <div class="cards">
         <!-- Card 1 -->
