--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
         <title>
             WhereNext?
         </title>
-        <link href= "senior-capstone/index.css" rel="stylesheet">
+        <link href= "index.css" rel="stylesheet">
 
     </head>
     <body>
         <header class="header">
             <div class="logo">
-                <img src="senior-capstone/web/img/logo.svg" alt="WhereNext logo" class="headerlogo">
-                <a href="senior-capstone/index.html" class="title">WhereNext?</a>
+                <img src="web/img/logo.svg" alt="WhereNext logo" class="headerlogo">
+                <a href="index.html" class="title">WhereNext?</a>
             </div>
-            <a href="senior-capstone/login.html" class="login">Log In</a>
+            <a href="login.html" class="login">Log In</a>
         </header>
 
         <div class="container">
                 
             <div class="text-section">
                 <div class="text_content">
-                    <img class="WhereNextLogo" src="senior-capstone/web/img/logo.svg" alt="WhereNext Logo">
+                    <img class="WhereNextLogo" src="web/img/logo.svg" alt="WhereNext Logo">
                     <h1>WhereNext?</h1>
                     <p class="move">Don't know where to move?</p>
                     <p class="prompt">Take the quiz to find out which city <br> is best for you.</p>
                     <div class="button-container">
-                    <a href="senior-capstone/quiz.html" class="start-quiz-button">Start Quiz</a>
+                    <a href="quiz.html" class="start-quiz-button">Start Quiz</a>
                 </div>
     
                 </div>
             </div>
             <div class="image-section">
-                <img src="senior-capstone/web/img/couple.png" alt="Moving People with Boxes">
+                <img src="web/img/couple.png" alt="Moving People with Boxes">
             </div>
         </div>
 
