--- a/quiz.html
+++ b/quiz.html
@@ -4,23 +4,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WhereNext?</title>
-        <link href= "senior-capstone/web/quiz.css" rel="stylesheet">
+        <link href= "web/quiz.css" rel="stylesheet">
     </head>
     <body>
         <header class="header">
             <div class="logo">
                 <img src="web/img/logo.png" alt="WhereNext logo" class="headerlogo">
-                <a href="senior-capstone/index.html" class="title">WhereNext?</a>
+                <a href="index.html" class="title">WhereNext?</a>
             </div>
-            <a href="senior-capstone/login.html" class="login">Log In</a>
+            <a href="login.html" class="login">Log In</a>
         </header>
 
         <section class="hero">
             <h2>Where should you move?</h2>
             <div class="navigation">
-                <a href="senior-capstone/quiz.html" class="option">Take the survey</a>
-                <a href="senior-capstone/matches.html" class="option">View Top Matches</a>
-                <a href="senior-capstone/map.html" class="option">Explore Options</a>
+                <a href="quiz.html" class="option">Take the survey</a>
+                <a href="matches.html" class="option">View Top Matches</a>
+                <a href="map.html" class="option">Explore Options</a>
             </div>
         </section>
         <form action="/submit-survey" method="POST" class="survey-container">
