--- a/login.html
+++ b/login.html
@@ -35,11 +35,9 @@
                     <input type="text" placeholder="Email">
                     <input type="text" placeholder="Password">
                     <a class="loginButton" href="quiz.html">Create Account</a>
-                    <p class="login">Already have an account? <a class='loginPage' href="senior-capstone/login.html">Log In</a> </p>
+                    <p class="login">Already have an account? <a class='loginPage' href="login.html">Log In</a> </p>
             </div>
         </div>
-
-        
     </body>
 
 </html>
