--- a/quiz.html
+++ b/quiz.html
@@ -28,7 +28,7 @@
                 <p>How much would you like to spend on living costs per month (rent, transportation, groceries?)</p>
                 <div class="slidecontainer">
                   <span class="slider-label left">&lt; $1k <br> per month</span>
-                  <input type="range" min="1000" max="3000" value="2000" class="slider" id="COL" required>
+                  <input type="range" min="1000" max="3000" value="2000" class="slider" id="COL" >
                   <span class="slider-label right">&gt; $3k <br> per month</span>
                 </div>
                 <div class="slider-value" id="sliderValue">$2000</div>
@@ -40,23 +40,23 @@
                 <div class="quiz">
                     <label class="option-label">
                         Not <br> Important
-                        <input type="radio" name="crime" value="1" required>
+                        <input type="radio" name="crime" value="1" >
                         <span class="radio-label green"></span>
                     </label>
                     <label class="option-label">
-                        <input type="radio" name="crime" value="2" required>
+                        <input type="radio" name="crime" value="2" >
                         <span class="radio-label green medium"></span>
                     </label>
                     <label class="option-label">
-                        <input type="radio" name="crime" value="3" required>
+                        <input type="radio" name="crime" value="3" >
                         <span class="radio-label small"></span>
                     </label>
                     <label class="option-label">
-                        <input type="radio" name="crime" value="4"required>
+                        <input type="radio" name="crime" value="4">
                         <span class="radio-label orange medium"></span>
                     </label>
                     <label class="option-label">
-                        <input type="radio" name="crime" value="5" required>
+                        <input type="radio" name="crime" value="5" >
                         <span class="radio-label orange"></span> Very <br> Important
                     </label>
                   </div>
