--- a/quiz.html
+++ b/quiz.html
@@ -392,7 +392,7 @@
             <select id="job-industry" name="job-industry">
                 <option value="" disabled selected>Select an industry</option>
                 <option value="natural-resources">Natural resources</option>
-                <option value="construction">Construction</option>
+                <option value="construction">Construction</option>4
                 <option value="manufacturing">Manufacturing</option>
                 <option value="sales">Sales</option>
                 <option value="transportation">Transportation</option>
