--- a/quiz.html
+++ b/quiz.html
@@ -406,7 +406,7 @@
             </select>
         </div>
             <div class="submit-section">
-                <a  class="submit" href="matches.html">Submit Survey</a>
+                <a class="submit" href="matches.html">Submit Survey!</a>
                 <!-- <button type="submit">Submit Survey</button>-->
             </div>
 
