--- a/survey.html
+++ b/survey.html
@@ -406,8 +406,8 @@
             </select>
         </div>
             <div class="submit-section">
-                <a class="submit" href="matches.html">Submit Survey!</a>
-                <!-- <button type="submit">Submit Survey</button>-->
+                <!-- <a class="submit" href="matches.html">Submit Survey!</a>-->
+                <button type="submit">Submit Survey</button>
             </div>
 
 
